--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Joke Generator</title>
+    <link rel="stylesheet" href="./css/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <main>
-        <h1>Joke Generator</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, suscipit.</p>
-        <button>new joke</button>
+        <h1 class="fs-xxl">Joke Generator</h1>
+        <p class="fs-l">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, suscipit.</p>
+        <button class="button-secondary fs-l fw-b m-3">new joke</button>
     </main>
     <script src="js/index.js"></script>
 </body>
