Add final solution to project

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
-<body>
-    <main>
-        <h1 class="fs-xxl">Joke Generator</h1>
-        <p class="fs-l">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, suscipit.</p>
-        <button class="button-secondary fs-l fw-b m-3">new joke</button>
+<body class="Body">
+    <main class="Main">
+        <h1 class="fs-xxl Main__header">Joke Generator</h1>
+        <p class="fs-l" id="jokeTxt"></p>
+        <button class="button_secondary fs-l fw-b m-3" id="jokeBtn">new joke</button>
     </main>
     <script src="js/index.js"></script>
 </body>
