--- a/index.html
+++ b/index.html
@@ -11,11 +11,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body class="Body">
-    <main class="Main">
+    <main class="Main p-2">
         <h1 class="fs-xxl Main__header">Joke Generator</h1>
-        <p class="fs-l" id="jokeTxt"></p>
+        <p class="fs-l p-2" id="jokeTxt"></p>
         <button class="button_secondary fs-l fw-b m-3" id="jokeBtn">new joke</button>
+        <form class="m-2" action="index.html?" method="GET">
+            <label for="term">Search for a term:</label>
+            <input type="text" id="term" name="term">
+            <ul class="fs ta-l" id="jokeList"></ul>
+        </form>
     </main>
-    <script src="js/index.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="./dist/index.min.js"></script>
 </body>
 </html>
